# SAT-solver

./: CMakeLists.txt  DPLL.cpp  DPLL.h  DPLLsolver.cpp  DPLLsolver.h  DimacsParser.h  README.md  SatSolver  build.sh  common.h  main.cpp  satSolver  test.sh  tiny_sat_solver.code-workspace
include/: CDCLsolver.h  DPLLsolver.h  DimacsParser.h  common.h
src/: CDCLsolver.cpp  DPLLsolver.cpp  main.cpp
test/: test1.cnf  test2.cnf  test3.cnf
tests/: t-7-8.cnf
version1/: DPLL.cpp  DPLL.h  DimacsParser.h  common.h  main.cpp
